--- a/index.html
+++ b/index.html
@@ -95,33 +95,6 @@
       </section>
     </div>
   </div>
-  <template class="product-template">
-    <li class="col-4">
-      <div class="card">
-        <img src="https://picsum.photos/300/200" alt="" class="card-img-top">
-        <div class="card-body">
-          <h3 class="card-title">Gadget title</h3>
-          <p class="card-text fw-bold"><mark class="card-discount-price">2.000.000</mark></p>
-          <p class="card-text"><s class="card-price">2.000.000</s></p>
-          <p class="badge bg-success gadget-firm">Xiaomi (gadget firmasi)</p>
-
-          <p class="card-text post-data">12.05.2022</p>
-
-          <ul class="d-flex flex-wrap list-unstyled product-benefit-list">
-            <li class="badge bg-primary me-1 mb-1 product-benefit"></li>
-            <!-- <li class="badge bg-primary me-1 mb-1 product-benefit">128gb</li>
-            <li class="badge bg-primary me-1 mb-1 product-benefit">Waterproof</li>
-            <li class="badge bg-primary me-1 mb-1 product-benefit">Falon yaxshi tarafi</li> -->
-          </ul>
-
-          <div class="position-absolute top-0 end-0 d-flex">
-            <button class="btn rounded-0 btn-secondary"><i class="fa-solid fa-pen"></i></button>
-            <button class="btn rounded-0 btn-danger"><i class="fa-solid fa-trash"></i></button>
-          </div>
-        </div>
-      </div>
-    </li>
-  </template>
   <div class="modal fade" id="edit-student-modal" tabindex="-1" aria-labelledby="editStudentModalLabel" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
@@ -164,9 +137,78 @@
       </div>
     </div>
   </div>
+  <div class="modal fade" id="edit-product-modal" tabindex="-1" aria-labelledby="editStudentModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="editStudentModalLabel">Edit product</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <form id="edit-form" class="add-product-form">
+            <div class="mb-3">
+              <label for="product-title" class="form-label">Title</label>
+              <input type="text" class="form-control" id="edit-product-title" placeholder="Falon telefon">
+            </div>
+            <div class="mb-3">
+              <label for="price" class="form-label">Narxi</label>
+              <input type="number" class="form-control" id="edit-price" placeholder="12400000">
+            </div>
+            <div class="mb-3">
+              <label for="product-manufacturer" class="form-label">Manufacturer</label>
+              <select class="form-select" id="edit-product-manufacturer">
+                <option selected disabled value="0">Select a manufacturer</option>
+                <!-- manufacturers array bu yerga kelishi kerak -->
+              </select>
+            </div>
+
+            <div class="mb-3">
+              <label for="benefits" class="form-label">Benefits</label>
+              <input type="text" class="form-control" id="edit-benefits" placeholder="150">
+
+              <ul class="d-flex flex-wrap list-unstyled mt-3">
+                <li class="me-1 mb-1"><button type="button" class="btn btn-sm badge rounded-pill btn-danger">8gb</button></li>
+                <li class="me-1 mb-1"><button type="button" class="btn btn-sm badge rounded-pill btn-danger">128gb</button></li>
+                <li class="me-1 mb-1"><button type="button" class="btn btn-sm badge rounded-pill btn-danger">Waterproof</button></li>
+                <li class="me-1 mb-1"><button type="button" class="btn btn-sm badge rounded-pill btn-danger">Falon yaxshi tarafi</button></li>
+              </ul>
+            </div>
+            <button type="submit" class="btn btn-primary d-block w-100 p-2">Edit product</button>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+  <template class="product-template">
+    <li class="col-4" id="one-product" data-id="">
+      <div class="card">
+        <img src="https://picsum.photos/300/200" alt="" class="card-img-top">
+        <div class="card-body">
+          <h3 class="card-title">Gadget title</h3>
+          <p class="card-text fw-bold"><mark class="card-discount-price">2.000.000</mark></p>
+          <p class="card-text"><s class="card-price">2.000.000</s></p>
+          <p class="badge bg-success gadget-firm">Xiaomi (gadget firmasi)</p>
+
+          <p class="card-text post-data">12.05.2022</p>
+
+          <ul class="d-flex flex-wrap list-unstyled product-benefit-list">
+            <li class="badge bg-primary me-1 mb-1 product-benefit"></li>
+            <!-- <li class="badge bg-primary me-1 mb-1 product-benefit">128gb</li>
+            <li class="badge bg-primary me-1 mb-1 product-benefit">Waterproof</li>
+            <li class="badge bg-primary me-1 mb-1 product-benefit">Falon yaxshi tarafi</li> -->
+          </ul>
+
+          <div class="position-absolute top-0 end-0 d-flex">
+            <button class="btn rounded-0 btn-secondary edit" data-bs-toggle="modal" data-bs-target="#edit-product-modal"><i class="fa-solid fa-pen" style="pointer-events: none;"></i></button>
+            <button class="btn rounded-0 btn-danger delete"><i class="fa-solid fa-trash" style="pointer-events: none;"></i></button>
+          </div>
+        </div>
+      </div>
+    </li>
+  </template>
 
   <script src="js/bootstrap.bundle.min.js"></script>
-
+    
   <script src="js/data.js"></script>
   <script src="js/main.js"></script>
 </body>
